refactor: adaptation jdk 8 syntax