@@ -6,6 +6,7 @@ import io.github.genie.sql.api.Expression;
 import io.github.genie.sql.api.ExpressionHolder;
 import io.github.genie.sql.api.ExpressionOperator.PathOperator;
 import io.github.genie.sql.api.ExpressionOperator.Predicate;
+import io.github.genie.sql.api.Lists;
 import io.github.genie.sql.api.Operation;
 import io.github.genie.sql.api.Operator;
 import io.github.genie.sql.api.Path;
@@ -17,14 +18,16 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
+@SuppressWarnings("PatternVariableCanBeUsed")
 public interface Expressions {
 
     Expression TRUE = of(true);
 
     static boolean isTrue(Expression expression) {
-        return expression instanceof Constant constant
-               && Boolean.TRUE.equals(constant.value());
+        return expression instanceof Constant
+                && Boolean.TRUE.equals(((Constant) expression).value());
     }
 
     static Expression of(ExpressionHolder<?, ?> expression) {
@@ -69,20 +72,22 @@ public interface Expressions {
     }
 
     static Expression operate(Expression l, Operator o, Expression r) {
-        return operate(l, o, List.of(r));
+        return operate(l, o, Lists.of(r));
     }
 
     static Expression operate(Expression l, Operator o) {
-        return operate(l, o, List.of());
+        return operate(l, o, Lists.of());
     }
 
     static Expression operate(Expression l, Operator o, List<? extends Expression> r) {
         if (o == Operator.NOT
-            && l instanceof Operation operation
-            && operation.operator() == Operator.NOT) {
+                && l instanceof Operation
+                && ((Operation) l).operator() == Operator.NOT) {
+            Operation operation = (Operation) l;
             return operation.operand();
         }
-        if (o.isMultivalued() && l instanceof Operation lo && lo.operator() == o) {
+        if (o.isMultivalued() && l instanceof Operation && ((Operation) l).operator() == o) {
+            Operation lo = (Operation) l;
             List<Expression> args = Util.concat(lo.args(), r);
             return new OperationMeta(lo.operand(), o, args);
         }
@@ -92,7 +97,7 @@ public interface Expressions {
     static <T> List<PathOperator<T, ?, Predicate<T>>> toExpressionList(Collection<Path<T, ?>> paths) {
         return paths.stream()
                 .<PathOperator<T, ?, Predicate<T>>>map(Q::get)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     static Column concat(Column join, String path) {
